<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tabLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/champagne"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLay"
        style="@style/Widget.MaterialComponents.TabLayout.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_tan"
        app:tabSelectedTextColor="@color/champagne"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:tabTextColor="@color/brown">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/homeTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/toDoTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_do_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/goalsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_goals" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/MoodTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_tracker_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/habitTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_tab" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>